Fri Feb  6 11:05:29 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, commands.inc, play.c, progress.c: Add a Command
	"analyse rollout double". Warn if user tryes to use analyse move on a
	take. Print final result if user interrupts rollouts in the cl
	interface.

Tue Feb  3 21:43:32 CET 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, play.c: remove quick_roll from non-gtk code

Sun Feb  1 16:59:04 CET 2009 Christian Anthon <anthon@kiku.dk>: 

	* gtkboard.c, play.c: New games/matches could be started when
	ms.gs==GAME_NONE even though the move wasn't the last in the match

Sun Feb  1 16:48:01 CET 2009 Christian Anthon <anthon@kiku.dk>

	* htmlimages.c: fix creation of htmlimages in the export dialog

Sat Jan 31 15:21:55 CET 2009 Christian Anthon <anthon@kiku.dk>

	* format.c, gtkchequer.c, gtkcube.c: Make the Copy button open a text
	window for easy display of analysis details.

Thu Jan 29 09:09:16 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c: use the right index in the new analyse rollout move
	function

Thu Jan 29 09:07:26 CET 2009 Christian Anthon <anthon@kiku.dk>

	* bearoff.c: avoid assert_false when hypergammon db present

Tue Jan 27 14:40:32 CET 2009 Christian Anthon <anthon@kiku.dk>

	* doc/allabout.xml, doc/gnubgdb.xml, doc/gnubg/allabout.html,
	doc/gnubg/allabout.pdf, doc/gnubg/gnubg.6, doc/gnubg/gnubg.html,
	doc/gnubg/gnubg.info, doc/gnubg/gnubg.pdf, doc/gnubg/gnubg.texi:
	Update document license to GFDL 1.3.

Mon Jan 26 12:09:19 CET 2009 Christian Anthon <anthon@kiku.dk>

	* progress.c: jSD not printed in text interface for fCubeRollout.

Mon Jan 26 10:49:56 CET 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix stop on stds in the MT code. May well be broken in
	the non-MT code as well.

Sun Jan 25 16:21:08 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c, play.c: Clicking anywhere on the board before first
	match is started starts a new match. Clicking in the dice area