@@ -1,3 +1,9 @@
+Fri Feb  6 14:02:25 CET 2009 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c, gtkgame.c, gtkwindows.c, gtkwindows.h, progress.c: Clean up
+	the rollout command. It hardly ever did what people wanted anyway. Now
+	only roll-outs the current position.
+
 Fri Feb  6 11:05:29 CET 2009 Christian Anthon <anthon@kiku.dk>
 
 	* analysis.c, backgammon.h, commands.inc, play.c, progress.c: Add a Command
